--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "firebase": "^7.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vuefire": "^2.1.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
